; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/initdb/extr_initdb.c_make_template0.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/initdb/extr_initdb.c_make_template0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@make_template0.template0_setup = internal constant [7 x i8*] [i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([108 x i8], [108 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i32 0, i32 0), i8* null], align 16
@.str = private unnamed_addr constant [74 x i8] c"CREATE DATABASE template0 IS_TEMPLATE = true ALLOW_CONNECTIONS = false;\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [108 x i8] c"UPDATE pg_database SET datlastsysoid =     (SELECT oid FROM pg_database     WHERE datname = 'template0');\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [61 x i8] c"REVOKE CREATE,TEMPORARY ON DATABASE template1 FROM public;\0A\0A\00", align 1
@.str.3 = private unnamed_addr constant [61 x i8] c"REVOKE CREATE,TEMPORARY ON DATABASE template0 FROM public;\0A\0A\00", align 1
@.str.4 = private unnamed_addr constant [66 x i8] c"COMMENT ON DATABASE template0 IS 'unmodifiable empty database';\0A\0A\00", align 1
@.str.5 = private unnamed_addr constant [22 x i8] c"VACUUM pg_database;\0A\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @make_template0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @make_template0(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8**, align 8
  store i32* %0, i32** %2, align 8
  store i8** getelementptr inbounds ([7 x i8*], [7 x i8*]* @make_template0.template0_setup, i64 0, i64 0), i8*** %3, align 8
  br label %4

4:                                                ; preds = %12, %1
  %5 = load i8**, i8*** %3, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %4
  %9 = load i8**, i8*** %3, align 8
  %10 = load i8*, i8** %9, align 8
  %11 = call i32 @PG_CMD_PUTS(i8* %10)
  br label %12

12:                                               ; preds = %8
  %13 = load i8**, i8*** %3, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i32 1
  store i8** %14, i8*** %3, align 8
  br label %4

15:                                               ; preds = %4
  ret void
}

declare dso_local i32 @PG_CMD_PUTS(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
